--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <script async custom-element="amp-auto-ads"
         src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
 </script>
-
+<style>
+        body{
+        background-color: rgba(0,0,0,1);
+        }
+</style>
 </head>
 <body>
 
