--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <script async custom-element="amp-auto-ads"
         src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
 </script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1246151838641783"
+     crossorigin="anonymous"></script>
 <style>
         body{
         background-color: rgba(0,0,0,1);
